tests/files/invalid_blendfiles/invalid_block_count.blend
version https://git-lfs.github.com/spec/v1
oid sha256:3de64fb6dc7b6dd4d0d78814d94ce04773f35b9be1b5df85f513500451195d16
size 81184
